<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">微讯</string>
    <string name="action_search">查找</string>
    <string name="action_add">添加</string>
    <string name="menu_group_chat">发起群聊</string>
    <string name="menu_feedback">意见反馈</string>
    <string name="menu_addfriend">添加朋友</string>
    <string name="menu_scan">扫一扫</string>
    <string name="tab_contact">通讯录</string>
    <string name="tab_found">发现</string>
    <string name="tab_me">我</string>
    <string name="setting">设置</string>
    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>
    <string name="phone">电话</string>
    <string name="address">地址</string>
    <string name="note">备注</string>
    <string name="label">标签</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="addcontact">新建联系人</string>
    <string name="name">姓名</string>
    <string name="scanQR">扫二维码</string>
    <string name="returnlast">返回</string>
    <string name="about">关于微讯</string>
    <string name="rules">#关于微讯：\n
#软件简介\n\n
    微讯作为一款完善的通讯录管理软件，可以让用户方便的管理自己的联系人，支持关键词匹配，
    模糊查找，二维码扫码等基础功能以及导入本机联系人，消息推送等高级功能。\n\n
#使用说明：\n\n
1.修改个人信息\n\n
（1）在“我”界面，点击设置按钮\n\n
（2）可以输入自己的姓名和电话，选择头像\n\n
（3）点击右上角的保存按钮保存个人信息\n\n
2.导入本地联系人\n\n
（1）在“我”界面，点击设置按钮\n\n
（2）点击“导入本地联系人"，加载完之后会在消息栏有提示\n
3.查找联系人\n
方法一：\n
在通讯录界面右侧有首字母的索引，点击对应索引可以快速到达指定区域\n
方法二：\n
（1）在主界面上方有搜索按钮，点击进入搜索界面\n
（2）在搜索框里面输入要查找的内容，可以是汉字，拼音或者数字\n
（3）根据全文搜索匹配到的联系人会显示在下方\n
4.查看联系人\n
（1）查找到联系人之后，点击改联系人进入联系人详情\n
（2）在详情页可以查看联系人的详细信息，并可以直接拨打电话或发送短信\n
4.编辑联系人\n
（1）在主界面右上方点开之后点击添加好友按钮或者进入联系人详情页后点击右上角的修改按钮\n
（2）输入联系人的相关信息，点击头像可以添加或修改头像，可以通过右上方的扫二维码按钮快速添加信息\n
（3）点击右上方的保存按钮，保存信息\n
5.扫码加联系人\n
（1）在首页的右上角点击扫二维码按钮或者在编辑联系人界面点击扫二维码按钮\n
（2）进入扫码界面，将二维码置于屏幕蓝色框中间位置\n
（3）在收到振动和声音提示后会返回二维码的信息\n
注：扫码的过程请确保网络连接正常，在编辑联系人界面扫描二维码的时候可以选择通知对方添加自己\n
6.删除联系人\n
方法一：\n
（1）在通讯录界面长按要删除的联系人\n
（2）在弹出的对话框中选删除\n
（3）在弹出的对话框中选是\n
方法二：\n
（1）进入联系人详情页，点击右上方的删除按钮\n
（2）在弹出的对话框中选是\n
7.编辑标签\n
方法一：\n
（1）标签界面右下角有个蓝色的加号或者在标签详情页点击右上方的编辑按钮，点击进入编辑标签界面\n
（2）选择标签下的联系人，并填写标签名（不能为空）\n
（3）点击右上方的保存按钮\n
方法二：\n
（1）进入编辑联系人界面\n
（2）点击下方右侧的红色加标签按钮\n
（3）输入标签名\n
（4）点击右上方的保存按钮\n
8.删除标签\n
方法一：\n
（1）在标签界面长按要删除的标签\n
（2）在弹出的对话框中选删除\n
（3）在弹出的对话框中选是\n
方法二：\n
（1）进入标签详情页，点击右上方的删除按钮\n
（2）在弹出的对话框中选是\n
9.意见反馈\n
（1）在主界面点击右上方的意见反馈按钮\n
（2）输入您的反馈意见\n
（3）在弹出的对话框中选择发送\n
10.查看软件介绍与使用说明\n
（1）在“我”界面，点击设置按钮\n
（2）点击“关于微讯”按钮\n\n
#声明：\n
本软件由WeCall团队自主开发，团队成员有下面6人组成（拼音排序）：\n
陈驰、李国聪、黎坤旻、邱敏仪、谢凡、徐晓欣（组长）\n
未经团队成员许可，请勿擅自使用或者修改软件的源代码\n
详细信息请登录我们的主页\n
http://iweixun.sinaapp.com\n
感谢您的使用和尊重</string>
    <string name="personinfo">个人信息</string>
    <string name="inputname">请输入姓名</string>
    <string name="inputphone">请输入电话</string>
    <string name="contactinfo">联系人详情</string>
    <string name="delete">删除</string>
    <string name="edit">编辑</string>
    <string name="add">添加</string>
    <string name="save">保存</string>
    <string name="editlabelinfo">编辑标签信息</string>
    <string name="labelhint">请输入标签名</string>
    <string name="title_activity_search">搜索</string>
    <string name="load_local_contacts">导入本地联系人</string>

</resources>