<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <com.wecall.contacts.view.DetailBar
        android:id="@+id/db_about_topbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/mmtitle_bg_alpha"
        custom:infoText="@string/about"
        custom:infoTextColor="#ffffff"
        custom:infoTextSize="10sp"
        custom:leftBackground="@drawable/mm_title_back_btn"
        custom:leftText="@string/returnlast"
        custom:leftTextColor="#ffffff"
        custom:leftTextSize="10sp" >
    </com.wecall.contacts.view.DetailBar>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbars="none" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/rules"
            android:textSize="15sp" />
    </ScrollView>

</LinearLayout>