<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

	<com.wecall.contacts.view.DetailBar 
	    android:id="@+id/db_setting_topbar"
	    android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/mmtitle_bg_alpha"
        custom:infoText="@string/setting"
        custom:infoTextColor="#ffffff"
        custom:infoTextSize="10sp"
        custom:leftText="@string/returnlast"
        custom:leftTextColor="#ffffff"
        custom:leftTextSize="10sp"
        custom:leftBackground="@drawable/mm_title_back_btn"
	    >
	    
	</com.wecall.contacts.view.DetailBar>
    
    <TextView android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_margin="15dp"
        android:text="个人信息"/>
    
    <ImageButton android:id="@+id/ibtn_setting_photo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_contact_picture"
        android:background="@null"
        android:layout_gravity="center_horizontal"/>
    
    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:paddingLeft="12dp"
            android:text="@string/name"/>
        
        <EditText android:id="@+id/et_setting_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="请输入姓名"/>
    </LinearLayout>
    
    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:paddingLeft="12dp"
            android:text="@string/phone"/>
        
        <EditText android:id="@+id/et_setting_phone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:inputType="phone"
            android:hint="请输入电话"/>
    </LinearLayout>
    
    <Button android:id="@+id/btn_setting_confire"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/sure"/>
    
    <LinearLayout android:id="@+id/ll_setting_about"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">
        
        <TextView android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:layout_weight="1"
            android:paddingLeft="12dp"
            android:textSize="18sp"/>
        
        <ImageView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_go"
            android:background="@null"/>
        
    </LinearLayout>
    
    

</LinearLayout>
